<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/section_header_text"
        style="@style/addEventFragmentSectionHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_event_title" />

    <EditText
        android:id="@+id/user_input"
        style="@style/addEventFragmentUserInputText"
        android:maxLength="50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_header_text"
        />

    <TextView
        android:id="@+id/var_letter_count"
        style="@style/addEventFragmentUserInputLetterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_letter_count_default"
        app:layout_constraintBottom_toBottomOf="@id/user_input"
        app:layout_constraintRight_toLeftOf="@id/static_letter_count"
        app:layout_constraintTop_toTopOf="@id/user_input" />



    <TextView
        android:id="@+id/static_letter_count"
        style="@style/addEventFragmentUserInputLetterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_letter_count_max"
        app:layout_constraintBottom_toBottomOf="@id/user_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_input" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_event_underline_height"
        android:layout_marginTop="@dimen/add_event_underline_margin"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_input" />

    <TextView
        android:id="@+id/error_hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/add_event_error_hint_margin"
        android:text="@string/add_event_error_hint_text"
        style="@style/errorHintText"
        app:layout_constraintTop_toBottomOf="@id/user_input"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>